--- a/.github/workflows/pr_main.yaml
+++ b/.github/workflows/pr_main.yaml
@@ -1,13 +1,15 @@
-name: latest
+name: pr_main
 on:
-  workflow_dispatch:
   push:
+    branches-ignore:
+      - "*"
+  pull_request:
     branches:
       - main
 
 jobs:
-  latest:
-    name: "latest"
+  pr_main:
+    name: "pr_main"
     runs-on: ubuntu-latest
 
     steps:
@@ -16,9 +18,7 @@ jobs:
         with:
           submodules: true
 
-      - name: latest
+      - name: pr_main
         shell: pwsh
         run: |
-          ./entrypoint.ps1 latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ./entrypoint.ps1 pr_main
